#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.63])
AC_INIT([zlreactor], [1.0], [lizhenghn@gmail.com])
AC_CONFIG_SRCDIR([zlreactor/Define.h])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE(zlreactor,1.0)
AC_PROG_LIBTOOL
AC_CONFIG_FILES([Makefile
                zlreactor/Makefile
                examples/Makefile
                examples/test_str_util/Makefile
                examples/atomic/Makefile
                examples/buffer_test/Makefile
                examples/test_zlog/Makefile
                examples/exception_mangle/Makefile
                examples/thread_test/Makefile
                examples/blockqueue_test/Makefile
                examples/timer_test/Makefile
                examples/smartassert_test/Makefile
                examples/reader_writer/Makefile
                examples/test_daemon/Makefile
                examples/test_signalfd/Makefile
                examples/simpleServers/Makefile
                examples/maxconnection/Makefile
                examples/roundtriptime/Makefile
                examples/test_tcpclient/Makefile
                examples/twisted_finger/Makefile
                tests/Makefile
                tests/stress_client/Makefile
                tests/universal_timer/Makefile
                tests/eventfd_epoll/Makefile
                tests/timerqueue/Makefile
                tests/timerfd/Makefile
                tests/epollclient/Makefile
                tests/epollserver/Makefile
                tests/signal_handler/Makefile
                tests/signalfd_epoll/Makefile
                tests/tcpselfconnect1/Makefile
                tests/tcpselfconnect2/Makefile
                tests/PipePairFactory/Makefile
                tests/master_worker_process/Makefile
                tests/socketAcceptThunderingHerd/Makefile
               ])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.
AC_CHECK_LIB([pthread], [main])

# Checks for header files.
AC_CHECK_HEADERS([arpa/inet.h fcntl.h netdb.h netinet/in.h stdint.h stdlib.h string.h sys/socket.h sys/time.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_INLINE
AC_TYPE_INT32_T
AC_TYPE_INT64_T
AC_TYPE_SIZE_T
AC_TYPE_SSIZE_T
AC_TYPE_UINT16_T
AC_TYPE_UINT32_T

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_MKTIME
AC_CHECK_FUNCS([bzero gethostbyname gettimeofday memset mkdir select socket strchr strerror])

AC_OUTPUT
