MAINTAINERCLEANFILES   = Makefile.in

SUBDIRS                =

SUBDIRS                += reader_writer 

SUBDIRS                += simpleServers

SUBDIRS                += roundtriptime

SUBDIRS                += test_tcpclient

SUBDIRS                += twisted_finger

SUBDIRS                += test_httpserver

SUBDIRS                += maxconnection

SUBDIRS                += idleconnection
