MAINTAINERCLEANFILES   = Makefile.in

SUBDIRS                =

SUBDIRS                += reader_writer 

SUBDIRS                += simpleServers

SUBDIRS                += roundtriptime

SUBDIRS                += twisted_finger

SUBDIRS                += test_httpserver

SUBDIRS                += maxconnection

SUBDIRS                += idleconnection

SUBDIRS                += echo
