MAINTAINERCLEANFILES   = Makefile.in

SUBDIRS                =

SUBDIRS                += universal_timer

SUBDIRS                += stress_client

SUBDIRS                += eventfd_epoll

SUBDIRS                += timerqueue

SUBDIRS                += timerfd

SUBDIRS                += epollclient

SUBDIRS                += epollserver

SUBDIRS                += signal_handler

SUBDIRS                += signalfd_epoll

SUBDIRS                += tcpselfconnect1

SUBDIRS                += tcpselfconnect2

SUBDIRS                += PipePairFactory

SUBDIRS                += master_worker_process

SUBDIRS                += socketAcceptThunderingHerd
