MAINTAINERCLEANFILES   = Makefile.in

SUBDIRS                =

SUBDIRS                += universal_timer

SUBDIRS                += stress_client

SUBDIRS                += timerqueue

SUBDIRS                += epoll_echoclient

SUBDIRS                += epoll_echoserver

SUBDIRS                += signal_handler

SUBDIRS                += tcpselfconnect1

SUBDIRS                += tcpselfconnect2

SUBDIRS                += PipePairFactory

SUBDIRS                += master_worker_process

SUBDIRS                += socketAcceptThunderingHerd

SUBDIRS                += bind_tcp_udp

SUBDIRS                += backtrace_test
