#CXXFLAGS += -Wall -static -g -O2 -fPIC

bin_PROGRAMS = echoserver

#INCLUDES = -I../../zlreactor
INCLUDES = -I/media/sf_D_DRIVE/zl_reactor/zlreactor

echoserver_CPPFLAGS = -std=c++0x
#echoserver_LDFLAGS = -L/media/sf_D_DRIVE/zl_reactor/lib -libzlreactor.a
echoserver_LDFLAGS = -L/media/sf_D_DRIVE/zl_reactor/lib -lzlreactor

echoserver_SOURCES = EchoServer.cpp
