#CXXFLAGS += -Wall -static -g -O2 -fPIC

bin_PROGRAMS = Timer_test SignalFd_test NetBuffer_test EventLoop_test DomainResolver_test HttpRequestParser_test

INCLUDES = -I../../../zlreactor
CPPFLAGS = -std=c++0x
LDFLAGS  = -L../../../lib -lzlreactor

Timer_test_CPPFLAGS = $(CPPFLAGS)
Timer_test_LDFLAGS  = $(CPPFLAGS)
Timer_test_SOURCES  = Timer_test.cpp

SignalFd_test_CPPFLAGS = $(CPPFLAGS)
SignalFd_test_LDFLAGS  = $(CPPFLAGS)
SignalFd_test_SOURCES  = SignalFd_test.cpp

NetBuffer_test_CPPFLAGS = $(CPPFLAGS)
NetBuffer_test_LDFLAGS  = $(CPPFLAGS)
NetBuffer_test_SOURCES  = NetBuffer_test.cpp

NetBuffer_test_CPPFLAGS = $(CPPFLAGS)
NetBuffer_test_LDFLAGS  = $(CPPFLAGS)
NetBuffer_test_SOURCES  = NetBuffer_test.cpp

EventLoop_test_CPPFLAGS = $(CPPFLAGS)
EventLoop_test_LDFLAGS  = $(CPPFLAGS)
EventLoop_test_SOURCES  = EventLoop_test.cpp

DomainResolver_test_CPPFLAGS = $(CPPFLAGS)
DomainResolver_test_LDFLAGS  = $(CPPFLAGS)
DomainResolver_test_SOURCES  = DomainResolver_test.cpp

HttpRequestParser_test_CPPFLAGS = $(CPPFLAGS)
HttpRequestParser_test_LDFLAGS  = $(CPPFLAGS)
HttpRequestParser_test_SOURCES  = HttpRequestParser_test.cpp

